[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Erik Aderstedt <erik@aderstedtsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1"
itertools = "0.9.0"
serde_json = "1.0"
bytecount = "0.6.2"
pathfinding = "2.1.1"
seahash = "4.0.1"
md5 = "*"