[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Erik Aderstedt <erik@aderstedtsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1"
itertools = "0.14.0"
serde_json = "1.0"
bytecount = "0.6.2"
pathfinding = "4.12.0"
seahash = "4.0.1"
md5 = "*"
scan_fmt = "0.2.6"
range-ext = "0.3.0"
rand = "0.8.5"
prime_factorization = "*"
